# mock-mesh

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  install.sh  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
assets/skill/: SKILL.md
assets/skill/examples/: mock-mesh.yaml  openapi.yaml
examples/: README.md  orders-api.yaml
examples/01-quickstart/: README.md
examples/02-latency/: README.md  mock-mesh.yaml
examples/03-errors/: README.md  mock-mesh.yaml
examples/04-rate-limiting/: README.md  mock-mesh.yaml
examples/05-admin-overrides/: README.md
examples/06-attachments/: README.md  mock-mesh.yaml  orders.csv
examples/07-array-length/: README.md  mock-mesh.yaml
src/: cli.rs  error.rs  lib.rs  loader.rs  main.rs  server.rs  skill.rs  state.rs  watch.rs
src/config/: mod.rs  model.rs  scaffold.rs
src/fake/: formats.rs  mod.rs
src/handlers/: admin.rs  mock.rs  mod.rs
src/openapi/: mod.rs  model.rs  resolve.rs
src/rules/: compile.rs  matcher.rs  mod.rs
src/simulate/: error_mode.rs  latency.rs  mod.rs  rate_limit.rs
tests/: admin_api.rs  attachments.rs  hot_reload.rs  mock_serving.rs  simulation.rs  skill_install.rs
tests/common/: mod.rs
tests/fixtures/: config-array-length.yaml  config-attachments.yaml  config-basic.yaml  config-chaos.yaml  petstore.json  petstore.yaml  sample.csv  schema-zoo.yaml
